Updating node server - rest api calls, new model class and view edits

--- a/Raspberry/node-app/views/index.pug
+++ b/Raspberry/node-app/views/index.pug
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+  .jumbotron
+    h1#node1(align='center') Hey!
+    h1#node2(align='center') Hey?
+    
+    
+
+  
